cilium/policys/all-acess/allow-all-clusterwide.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-clusterwide
spec:
  endpointSelector: {}  # Aplica para todos os pods em todos os namespaces
  ingress:
  - fromEntities:
    - all
  egress:
  - toEntities:
    - all
